--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "css-loader": "^3.1.0",
     "extract-text-webpack-plugin": "^4.0.0-beta.0",
     "file-loader": "^4.1.0",
+    "html-loader": "^0.4.4",
     "html-webpack-plugin": "^3.2.0",
     "image-webpack-loader": "^5.0.0",
     "mini-css-extract-plugin": "^0.8.0",
