--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "private": true,
   "scripts": {
-    "build": "webpack",
+    "build": "webpack --config ./webpack.config.prod.js",
     "start": "webpack-dev-server --config ./webpack.config.js --mode development"
   },
   "keywords": [],
@@ -26,6 +26,7 @@
     "image-webpack-loader": "^5.0.0",
     "mini-css-extract-plugin": "^0.8.0",
     "style-loader": "^0.23.1",
+    "uglifyjs-webpack-plugin": "^2.2.0",
     "url-loader": "^2.1.0",
     "webpack": "^4.39.1",
     "webpack-cli": "^3.3.6",
