--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@babel/plugin-proposal-object-rest-spread": "^7.0.0-beta.42",
     "@babel/preset-env": "^7.5.5",
     "babel-loader": "^8.0.6",
+    "babel-plugin-angularjs-annotate": "^0.10.0",
     "babel-polyfill": "^6.26.0",
     "babel-preset-es2015": "^6.22.0",
     "clean-webpack-plugin": "^3.0.0",
