--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "private": true,
   "scripts": {
     "build": "webpack --config ./webpack.config.prod.js",
-    "start": "webpack-dev-server --config ./webpack.config.js --mode development"
+    "start": "webpack-dev-server --config ./webpack.config.js --mode development",
+    "mini": "webpack --config ./webpack.config.img.js --mode development"
   },
   "keywords": [],
   "author": "",
