--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "url-loader": "^2.1.0",
     "webpack": "^4.39.1",
     "webpack-cli": "^3.3.6",
+    "webpack-dashboard": "^3.0.7",
     "webpack-dev-server": "^3.7.2"
   }
 }
